<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Favorite Scripture</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="book">Book</string>
    <string name="chapter">Chapter</string>
    <string name="verse">Verse</string>
    <string name="edit_book">Enter a book...</string>
    <string name="edit_chapter">Enter a chapter...</string>
    <string name="edit_verse">Enter a verse...</string>
    <string name="button_share">Share</string>
    <string name="title_activity_output">Output</string>

</resources>
