<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Input">

    <TextView android:text="@string/book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book"/>

    <TextView android:text="@string/chapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chapter"
        android:layout_below="@+id/bookEnter"/>

    <TextView android:text="@string/verse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verse"
        android:layout_below="@+id/chapterEnter"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_book"
        android:id="@+id/bookEnter"
        android:layout_below="@+id/book"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_chapter"
        android:id="@+id/chapterEnter"
        android:layout_below="@+id/chapter"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_verse"
        android:id="@+id/verseEnter"
        android:layout_below="@+id/verse"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verseEnter"
        android:text="@string/button_share"
        android:onClick="share"/>

</RelativeLayout>
